trying out css grid

--- a/index.html
+++ b/index.html
@@ -1,72 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <title>Inlämningsuppgift 2</title>
 </head>
+
 <body>
   <section class="wrapper">
     <header class="top">
       <nav class="navigator">
-    <!-- Logotyp -->
-    <a class="logo" href="#">Logo</a>
-    <!-- Meny navigationen -->
-      <a href="#">Menu 1</a>
-      <a href="#">Menu 2</a>
-      <a href="#">Menu 3</a>
-      <a href="#">Menu 4</a>
-    </nav>
-  </header>
-  
-  <!-- Rubrik och undertext -->
-<header class="rubrik">
-  <div class="bigtitle">
-  <h1>Här är en stor rubrik</h1>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi exercitationem consequuntur est expedita totam quod numquam in! Consectetur nostrum, esse explicabo reprehenderit dolorem, tempora sapiente laborum vel veniam distinctio temporibus.</p>  
-  </div>
-</header>
+        <!-- Logotyp -->
+        <a class="logo" href="#">Logo</a>
+        <!-- Meny navigationen -->
+        <a href="#">Menu 1</a>
+        <a href="#">Menu 2</a>
+        <a href="#">Menu 3</a>
+        <a href="#">Menu 4</a>
+      </nav>
+    </header>
 
-  <!-- Informationsdelen -->
-  <main>
-  <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-  <section>
-    <h2>Här är en rubrik</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia neque earum perspiciatis maiores velit alias!</p>
-  </section>
-  <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-  <section>
-      <h2>Här är en rubrik</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia neque earum perspiciatis maiores velit alias!</p>
+    <!-- Rubrik och undertext -->
+    <header class="rubrik">
+      <div class="bigtitle">
+        <h1>Här är en stor rubrik</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi exercitationem consequuntur est expedita totam
+          quod numquam in! Consectetur nostrum, esse explicabo reprehenderit dolorem, tempora sapiente laborum vel
+          veniam distinctio temporibus.</p>
+      </div>
+    </header>
+
+    <!-- Informationsdelen -->
+    <main>
+      <section class="boxes">
+        <h2>Här är en rubrik</h2>
+        <article class="first">
+          <div class="image">
+            <img src="https://via.placeholder.com/450x350"></a>
+          </div>
+          <div class="fonts">
+            <h3>Här är en rubrik</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia
+              neque earum perspiciatis maiores velit alias!</p>
+          </div>
+        </article>
+        <article class="second">
+          <div class="image">
+            <img src="https://via.placeholder.com/450x350">
+          </div>
+          <div class="fonts">
+            <h3>Här är en rubrik</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia
+              neque earum perspiciatis maiores velit alias!</p>
+          </div>
+        </article>
+        <article class="third">
+          <div class="image">
+            <img src="https://via.placeholder.com/450x350">
+          </div>
+          <div class="fonts">
+            <h3>Här är en rubrik</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia
+              neque earum perspiciatis maiores velit alias!</p>
+          </div>
+        </article>
+      </section>
+      <!-- Delen innan footern -->
+      <section class="overview">
+        <div>
+          <h4>Här är en rubrik</h4>
+        </div>
+        <div class="moreboxes">
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+        </div>
+      </section>
+    </main>
+    <section class="grid">
+      <section class="tasks">
+        <div class="taskspara">
+          <div class="para">
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
+              recusandae eius et corrupti!</p>
+          </div>
+        </div>
+        <div class="tasksimg1"></div>
+        <div class="tasksimg2"></div>
+        <div class="tasksimg3"></div>
+        <div class="tasksimg4"></div>
+      </section>
+
+      <section class="aboutus">
+        <div class="aboutusimg"></div>
+        <div class="aboutustext">
+          <h3>Lorem ipsum dolor sit amet.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
+            recusandae eius et corrupti!</p>
+          <h3>Lorem ipsum dolor sit amet.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
+            recusandae eius et corrupti!</p>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <div class="galleryimg1"></div>
+        <div class="galleryimg2"></div>
+        <div class="galleryimg3"></div>
+        <div class="galleryimg4"></div>
+        <div class="gallerytext">
+          <h3>Lorem ipsum dolor sit amet.</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
+            recusandae eius et corrupti!</p>
+        </div>
+        <div class="galleryimg5"></div>
+        <div class="galleryimg6"></div>
+        <div class="galleryimg7"></div>
+        <div class="galleryimg8"></div>
+      </section>
     </section>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-  <section>
-      <h2>Här är en rubrik</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia neque earum perspiciatis maiores velit alias!</p>
-    </section>
 
-    <!-- Delen innan footern -->
-    <section class="overview"></section>
-    <h3>Här är en rubrik</h3>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-    <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
-  </main>
 
-  <!-- Footern -->
-  <footer>
-    <div class="logo"><p>Logo</p></div>
-    <div class="menu1"><p>Menu 1</p></div>
-    <div class="menu2"><p>Menu 2</p></div>
-    <div class="menu3"><p>Menu 3</p></div>
-    <div class="menu4"><p>Menu 4</p></div>
-  </footer>
+    <!-- Footern -->
+    <footer>
+      <div class="footerlogo">
+        <a class="logo">Logo</a>
+      </div>
+      <div class="footermenu">
+        <a href="#">Menu 1</a>
+        <a href="#">Menu 2</a>
+        <a href="#">Menu 3</a>
+        <a href="#">Menu 4</a>
+      </div>
+    </footer>
 </body>
+
 </html>
