changed backgroundimg to imgtags

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
               recusandae eius et corrupti!</p>
           </div>
         </div>
-        <div class="tasksimg1"></div>
-        <div class="tasksimg2"></div>
-        <div class="tasksimg3"></div>
-        <div class="tasksimg4"></div>
+        <div class="imgwrapper tasksimg1"><img src="https://via.placeholder.com/500" class="tasksimg1"></img></div>
+        <div class="imgwrapper tasksimg2"><img src="https://via.placeholder.com/500" class="tasksimg2"></img></div>
+        <div class="imgwrapper tasksimg3"><img src="https://via.placeholder.com/500" class="tasksimg3"></img></div>
+        <div class="imgwrapper tasksimg4"><img src="https://via.placeholder.com/500" class="tasksimg4"></img></div>
       </section>
 
       <section class="aboutus">
-        <div class="aboutusimg"></div>
+        <div class="imgwrapper aboutusimg"><img src="https://via.placeholder.com/500" class="aboutusimg"></img></div>
         <div class="aboutustext">
           <h3>Lorem ipsum dolor sit amet.</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
@@ -114,19 +114,19 @@
       </section>
 
       <section class="gallery">
-        <div class="galleryimg1"></div>
-        <div class="galleryimg2"></div>
-        <div class="galleryimg3"></div>
-        <div class="galleryimg4"></div>
+        <div class="imgwrapper galleryimg1"><img src="https://via.placeholder.com/500" class="galleryimg1"></img></div>
+        <div class="imgwrapper galleryimg2"><img src="https://via.placeholder.com/500" class="galleryimg2"></img></div>
+        <div class="imgwrapper galleryimg3"><img src="https://via.placeholder.com/500" class="galleryimg3"></img></div>
+        <div class="imgwrapper galleryimg4"><img src="https://via.placeholder.com/500" class="galleryimg4"></img></div>
         <div class="gallerytext">
           <h3>Lorem ipsum dolor sit amet.</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
             recusandae eius et corrupti!</p>
         </div>
-        <div class="galleryimg5"></div>
-        <div class="galleryimg6"></div>
-        <div class="galleryimg7"></div>
-        <div class="galleryimg8"></div>
+        <div class="imgwrapper galleryimg5"><img src="https://via.placeholder.com/500" class="galleryimg5"></img></div>
+        <div class="imgwrapper galleryimg6"><img src="https://via.placeholder.com/500" class="galleryimg6"></img></div>
+        <div class="imgwrapper galleryimg7"><img src="https://via.placeholder.com/500" class="galleryimg7"></img></div>
+        <div class="imgwrapper galleryimg8"><img src="https://via.placeholder.com/500" class="galleryimg8"></img></div>
       </section>
     </section>
 
