--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css" type="text/css">
+  <link rel="stylesheet" href="media.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <title>Inlämningsuppgift 2</title>
 </head>
@@ -15,12 +16,16 @@
     <header class="top">
       <nav class="navigator">
         <!-- Logotyp -->
-        <a class="logo" href="#">Logo</a>
+        <div>
+          <a class="logo" href="#">Logo</a>
+        </div>
         <!-- Meny navigationen -->
-        <a href="#">Menu 1</a>
-        <a href="#">Menu 2</a>
-        <a href="#">Menu 3</a>
-        <a href="#">Menu 4</a>
+        <div>
+          <a href="#">Menu 1</a>
+          <a href="#">Menu 2</a>
+          <a href="#">Menu 3</a>
+          <a href="#">Menu 4</a>
+        </div>
       </nav>
     </header>
 
