changed css code to sass

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css" type="text/css">
-  <link rel="stylesheet" href="media.css" type="text/css">
+  <link rel="stylesheet" href="./styles/main.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <title>Inlämningsuppgift 2</title>
 </head>
@@ -74,7 +73,7 @@
           </div>
         </article>
       </section>
-      <!-- Delen innan footern -->
+      <!-- Delen med 8 bilder -->
       <section class="overview">
         <div>
           <h4>Här är en rubrik</h4>
