--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
     <!-- Informationsdelen -->
     <main>
-      <section class="boxes">
+      <section class="informationwrapper">
         <h2>Här är en rubrik</h2>
-        <article class="first">
+        <article class="informationfirstpost">
           <div class="image">
             <img src="https://via.placeholder.com/450x350"></a>
           </div>
@@ -52,7 +52,7 @@
               neque earum perspiciatis maiores velit alias!</p>
           </div>
         </article>
-        <article class="second">
+        <article class="informationsecondpost">
           <div class="image">
             <img src="https://via.placeholder.com/450x350">
           </div>
@@ -62,7 +62,7 @@
               neque earum perspiciatis maiores velit alias!</p>
           </div>
         </article>
-        <article class="third">
+        <article class="informationthirdpost">
           <div class="image">
             <img src="https://via.placeholder.com/450x350">
           </div>
@@ -74,11 +74,11 @@
         </article>
       </section>
       <!-- Delen med 8 bilder -->
-      <section class="overview">
+      <section class="socialmedia">
         <div>
           <h4>Här är en rubrik</h4>
         </div>
-        <div class="moreboxes">
+        <div class="socialmediaboxes">
           <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
           <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
           <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
@@ -106,7 +106,7 @@
       </section>
 
       <section class="aboutus">
-        <div class="imgwrapper aboutusimg"><img src="https://via.placeholder.com/500" class="aboutusimg"></img></div>
+        <div class="imgwrapper aboutusimg"><img src="https://via.placeholder.com/600" class="aboutusimg"></img></div>
         <div class="aboutustext">
           <h3>Lorem ipsum dolor sit amet.</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
@@ -124,8 +124,8 @@
         <div class="imgwrapper galleryimg4"><img src="https://via.placeholder.com/500" class="galleryimg4"></img></div>
         <div class="gallerytext">
           <h3>Lorem ipsum dolor sit amet.</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
-            recusandae eius et corrupti!</p>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis voluptatibus blanditiis tempore.
+            Perspiciatis culpa ducimus distinctio neque, necessitatibus earum in nobis.</p>
         </div>
         <div class="imgwrapper galleryimg5"><img src="https://via.placeholder.com/500" class="galleryimg5"></img></div>
         <div class="imgwrapper galleryimg6"><img src="https://via.placeholder.com/500" class="galleryimg6"></img></div>
