--- a/index.html
+++ b/index.html
@@ -41,33 +41,33 @@
     <!-- Informationsdelen -->
     <main>
       <section class="informationwrapper">
-        <h2>Här är en rubrik</h2>
+        <h2>The world around the corner</h2>
         <article class="informationfirstpost">
           <div class="image">
-            <img src="https://via.placeholder.com/450x350"></a>
+            <img src="/pictures/images/section-1/kajak.jpg"></a>
           </div>
           <div class="fonts">
-            <h3>Här är en rubrik</h3>
+            <h3>Everywhere human</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia
               neque earum perspiciatis maiores velit alias!</p>
           </div>
         </article>
         <article class="informationsecondpost">
           <div class="image">
-            <img src="https://via.placeholder.com/450x350">
+            <img src="/pictures/images/section-1/cliff.jpg">
           </div>
           <div class="fonts">
-            <h3>Här är en rubrik</h3>
+            <h3>Explore</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia
               neque earum perspiciatis maiores velit alias!</p>
           </div>
         </article>
         <article class="informationthirdpost">
           <div class="image">
-            <img src="https://via.placeholder.com/450x350">
+            <img src="/pictures/images/section-1/night.jpg">
           </div>
           <div class="fonts">
-            <h3>Här är en rubrik</h3>
+            <h3>Under the sky</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, tenetur! Commodi laboriosam soluta quia
               neque earum perspiciatis maiores velit alias!</p>
           </div>
@@ -76,17 +76,17 @@
       <!-- Delen med 8 bilder -->
       <section class="socialmedia">
         <div>
-          <h4>Här är en rubrik</h4>
+          <h4>Where feets belong</h4>
         </div>
         <div class="socialmediaboxes">
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
-          <a href="https://placeholder.com"><img src="https://via.placeholder.com/165"></a>
+          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet1.jpg"></a>
+          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet2.jpg"></a>
+          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet3.jpg"></a>
+          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet4.jpg"></a>
+          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet5.jpg"></a>
+          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet6.jpg"></a>
+          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet7.jpg"></a>
+          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet8.jpg"></a>
         </div>
       </section>
     </main>
@@ -94,43 +94,56 @@
       <section class="tasks">
         <div class="taskspara">
           <div class="para">
-            <h3>Lorem ipsum dolor sit amet.</h3>
+            <h3>Roads to wilderness</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
               recusandae eius et corrupti!</p>
           </div>
         </div>
-        <div class="imgwrapper tasksimg1"><img src="https://via.placeholder.com/500" class="tasksimg1"></img></div>
-        <div class="imgwrapper tasksimg2"><img src="https://via.placeholder.com/500" class="tasksimg2"></img></div>
-        <div class="imgwrapper tasksimg3"><img src="https://via.placeholder.com/500" class="tasksimg3"></img></div>
-        <div class="imgwrapper tasksimg4"><img src="https://via.placeholder.com/500" class="tasksimg4"></img></div>
+        <div class="imgwrapper tasksimg1"><img src="/pictures/images/section-3/road-1.jpg" class="tasksimg1"></img>
+        </div>
+        <div class="imgwrapper tasksimg2"><img src="/pictures/images/section-3/road-2.png" class="tasksimg2"></img>
+        </div>
+        <div class="imgwrapper tasksimg3"><img src="/pictures/images/section-3/road-4.jpg" class="tasksimg3"></img>
+        </div>
+        <div class="imgwrapper tasksimg4"><img src="/pictures/images/section-3/road-3.jpg" class="tasksimg4"></img>
+        </div>
       </section>
 
       <section class="aboutus">
-        <div class="imgwrapper aboutusimg"><img src="https://via.placeholder.com/600" class="aboutusimg"></img></div>
+        <div class="imgwrapper aboutusimg"><img src="/pictures/images/section-4/tundra-small.jpg"
+            class="aboutusimg"></img></div>
         <div class="aboutustext">
-          <h3>Lorem ipsum dolor sit amet.</h3>
+          <h3>Beyond the pole</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
             recusandae eius et corrupti!</p>
-          <h3>Lorem ipsum dolor sit amet.</h3>
+          <h3>Awakening nature</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
             recusandae eius et corrupti!</p>
         </div>
       </section>
 
       <section class="gallery">
-        <div class="imgwrapper galleryimg1"><img src="https://via.placeholder.com/500" class="galleryimg1"></img></div>
-        <div class="imgwrapper galleryimg2"><img src="https://via.placeholder.com/500" class="galleryimg2"></img></div>
-        <div class="imgwrapper galleryimg3"><img src="https://via.placeholder.com/500" class="galleryimg3"></img></div>
-        <div class="imgwrapper galleryimg4"><img src="https://via.placeholder.com/500" class="galleryimg4"></img></div>
+        <div class="imgwrapper galleryimg1"><img src="/pictures/images/section-5-collage/collage-1.jpg"
+            class="galleryimg1"></img></div>
+        <div class="imgwrapper galleryimg2"><img src="/pictures/images/section-5-collage/collage-2.jpg"
+            class="galleryimg2"></img></div>
+        <div class="imgwrapper galleryimg3"><img src="/pictures/images/section-5-collage/collage-3.jpg"
+            class="galleryimg3"></img></div>
+        <div class="imgwrapper galleryimg4"><img src="/pictures/images/section-5-collage/collage-4.jpg"
+            class="galleryimg4"></img></div>
         <div class="gallerytext">
-          <h3>Lorem ipsum dolor sit amet.</h3>
+          <h3>Don't miss the next adventure</h3>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis voluptatibus blanditiis tempore.
             Perspiciatis culpa ducimus distinctio neque, necessitatibus earum in nobis.</p>
         </div>
-        <div class="imgwrapper galleryimg5"><img src="https://via.placeholder.com/500" class="galleryimg5"></img></div>
-        <div class="imgwrapper galleryimg6"><img src="https://via.placeholder.com/500" class="galleryimg6"></img></div>
-        <div class="imgwrapper galleryimg7"><img src="https://via.placeholder.com/500" class="galleryimg7"></img></div>
-        <div class="imgwrapper galleryimg8"><img src="https://via.placeholder.com/500" class="galleryimg8"></img></div>
+        <div class="imgwrapper galleryimg5"><img src="/pictures/images/section-5-collage/collage-5.jpg"
+            class="galleryimg5"></img></div>
+        <div class="imgwrapper galleryimg6"><img src="/pictures/images/section-5-collage/collage-7.jpg"
+            class="galleryimg6"></img></div>
+        <div class="imgwrapper galleryimg7"><img src="/pictures/images/section-5-collage/collage-6.jpg"
+            class="galleryimg7"></img></div>
+        <div class="imgwrapper galleryimg8"><img src="pictures/images/section-5-collage/collage-8.jpg"" class="
+            galleryimg8"></img></div>
       </section>
     </section>
 
