--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./styles/main.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Unica+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <title>Inlämningsuppgift 2</title>
 </head>
@@ -16,7 +17,7 @@
       <nav class="navigator">
         <!-- Logotyp -->
         <div>
-          <a class="logo" href="#">Logo</a>
+          <a class="logo" href="#">TRAVELSON</a>
         </div>
         <!-- Meny navigationen -->
         <div>
@@ -31,7 +32,7 @@
     <!-- Rubrik och undertext -->
     <header class="rubrik">
       <div class="bigtitle">
-        <h1>Här är en stor rubrik</h1>
+        <h1>Life is a travel</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi exercitationem consequuntur est expedita totam
           quod numquam in! Consectetur nostrum, esse explicabo reprehenderit dolorem, tempora sapiente laborum vel
           veniam distinctio temporibus.</p>
@@ -94,7 +95,7 @@
       <section class="tasks">
         <div class="taskspara">
           <div class="para">
-            <h3>Roads to wilderness</h3>
+            <h3>Roads throug wilderness</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
               recusandae eius et corrupti!</p>
           </div>
@@ -151,7 +152,7 @@
     <!-- Footern -->
     <footer>
       <div class="footerlogo">
-        <a class="logo">Logo</a>
+        <a class="logo">TRAVELSON</a>
       </div>
       <div class="footermenu">
         <a href="#">Menu 1</a>
