--- a/index.html
+++ b/index.html
@@ -92,28 +92,32 @@
       </section>
     </main>
     <section class="grid">
-      <section class="tasks">
-        <div class="taskspara">
-          <div class="para">
-            <h3>Roads throug wilderness</h3>
+      <section class="services">
+        <div class="services__text">
+          <div class="text">
+            <h3>Roads through wilderness</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
               recusandae eius et corrupti!</p>
           </div>
         </div>
-        <div class="imgwrapper tasksimg1"><img src="/pictures/images/section-3/road-1.jpg" class="tasksimg1"></img>
+        <div class="imgwrapper services__img1"><img src="/pictures/images/section-3/road-1.jpg"
+            class="services__img1"></img>
         </div>
-        <div class="imgwrapper tasksimg2"><img src="/pictures/images/section-3/road-2.png" class="tasksimg2"></img>
+        <div class="imgwrapper services__img2"><img src="/pictures/images/section-3/road-2.png"
+            class="services__img2"></img>
         </div>
-        <div class="imgwrapper tasksimg3"><img src="/pictures/images/section-3/road-4.jpg" class="tasksimg3"></img>
+        <div class="imgwrapper services__img3"><img src="/pictures/images/section-3/road-4.jpg"
+            class="services__img3"></img>
         </div>
-        <div class="imgwrapper tasksimg4"><img src="/pictures/images/section-3/road-3.jpg" class="tasksimg4"></img>
+        <div class="imgwrapper services__img4"><img src="/pictures/images/section-3/road-3.jpg"
+            class="services__img4"></img>
         </div>
       </section>
 
       <section class="aboutus">
-        <div class="imgwrapper aboutusimg"><img src="/pictures/images/section-4/tundra-small.jpg"
-            class="aboutusimg"></img></div>
-        <div class="aboutustext">
+        <div class="imgwrapper aboutus__img"><img src="/pictures/images/section-4/tundra-small.jpg"
+            class="aboutus__img"></img></div>
+        <div class="aboutus__text">
           <h3>Beyond the pole</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam adipisci, eligendi consequuntur
             recusandae eius et corrupti!</p>
@@ -150,11 +154,11 @@
 
 
     <!-- Footern -->
-    <footer>
-      <div class="footerlogo">
+    <footer class="end">
+      <div class="end__logo">
         <a class="logo">TRAVELSON</a>
       </div>
-      <div class="footermenu">
+      <div class="end__menu">
         <a href="#">Menu 1</a>
         <a href="#">Menu 2</a>
         <a href="#">Menu 3</a>
