--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
           <h4>Where feets belong</h4>
         </div>
         <div class="socialmediaboxes">
-          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet1.jpg"></a>
-          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet2.jpg"></a>
-          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet3.jpg"></a>
-          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet4.jpg"></a>
-          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet5.jpg"></a>
-          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet6.jpg"></a>
-          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet7.jpg"></a>
-          <a href="/index.html"><img src="/pictures/images/section-2-thumbnails/feet8.jpg"></a>
+          <div><img src="/pictures/images/section-2-thumbnails/feet2.jpg"></div>
+          <div><img src="/pictures/images/section-2-thumbnails/feet3.jpg"></div>
+          <div><img src="/pictures/images/section-2-thumbnails/feet4.jpg"></div>
+          <div><img src="/pictures/images/section-2-thumbnails/feet1.jpg"></div>
+          <div><img src="/pictures/images/section-2-thumbnails/feet5.jpg"></div>
+          <div><img src="/pictures/images/section-2-thumbnails/feet6.jpg"></div>
+          <div><img src="/pictures/images/section-2-thumbnails/feet7.jpg"></div>
+          <div><img src="/pictures/images/section-2-thumbnails/feet8.jpg"></div>
         </div>
       </section>
     </main>
